<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:paddingBottom="12dp">


    <LinearLayout style="@style/LinearLayoutHorizontalStyle">

        <ImageView
            android:id="@+id/fun_player_bar_image"
            style="@style/PlayNowBarImageStyle"
            android:contentDescription="@string/player_bar_player_image_text"
            android:src="@drawable/player_icon" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_bar_song_title_text"
                style="@style/PlayBarTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:lines="1"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:text="@string/player_bar_song_title_text"
                android:textColor="@color/song_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/player_bar_previous_image"
                    style="@style/AllSongsPlayBarImageStyle"
                    android:contentDescription="@string/player_bar_previous_image_text"
                    android:src="@drawable/previous_icon" />

                <ImageView
                    android:id="@+id/player_bar_play_image"
                    style="@style/AllSongsPlayBarImageStyle"
                    android:contentDescription="@string/player_bar_previous_image_text"
                    android:src="@drawable/play_icon" />

                <ImageView
                    android:id="@+id/player_bar_next_image"
                    style="@style/AllSongsPlayBarImageStyle"
                    android:contentDescription="@string/player_bar_play_image_text"
                    android:src="@drawable/next_icon" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/player_bar_playlist_image"
            style="@style/PlayNowBarImageStyle"
            android:contentDescription="@string/player_bar_next_image_text"
            android:src="@drawable/menu_icon" />
    </LinearLayout>
</RelativeLayout>
